--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 					<div id="intro">
 						<h1>Meera<br />
 						Rachamallu</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p>Programmer, Designer, Entrepreneur </p>
+						<!--<a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
+						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. -->
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,14 +31,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<!--<a href="index.html" class="logo">Massively</a> ?-->
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li class="active"><a href="index.html">About me</a></li>
+							<li><a href="generic.html">Projects</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -55,19 +56,20 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
+									<h2><a href="#">Under Construction<br />
+									stay tuned for more</a></h2>
+									<p>I am a second year Computer Science student at UCLA exploring web development, app development, and software development<br /> <!--
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									amet nullam sed etiam veroeros. /--></p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions">
-									<li><a href="#" class="button big">Full Story</a></li>
+								<a href="#" class="image main"><img src="images/roomiepic.jpg" alt="" /></a>
+								<ul class="actions"> 
+									<li><a href="https://beginnerchefs.wordpress.com/" class="button big">Check Out My Food Blog!</a></li> 
 								</ul>
 							</article>
 
 						<!-- Posts -->
+						<!--
 							<section class="posts">
 								<article>
 									<header>
@@ -142,11 +144,12 @@
 									</ul>
 								</article>
 							</section>
-
+							/-->
 						<!-- Footer -->
+						<!--
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -159,6 +162,7 @@
 							</footer>
 
 					</div>
+					/-->
 
 				<!-- Footer -->
 					<footer id="footer">
