--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Meera<br />
 						Rachamallu</h1>
-						<p>Programmer, Designer, Entrepreneur </p>
+						<p>Programmer · Designer · Entrepreneur </p>
 						<!--<a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
 						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. -->
 						<ul class="actions">
@@ -38,7 +38,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">About me</a></li>
-							<li><a href="generic.html">Projects</a></li>
+							<li><a href="projects.html">Projects</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
