--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 	<head>
 		<title>Meera Rachamallu</title>
-		<link href= "style.css" type="text/css" rel="stylesheet"
+		<link href= "style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 		<!-- buttons -->
@@ -20,12 +20,19 @@
 			</div>
 		</div>
 		<!-- home look -->
-			<div class="container">
-				<div class="main">
-					<h1> MEERA RACHAMALLU </h1>
-					<h1> <a href = "aboutme.html" class="btn"> ABOUT ME</a> </h1>
-					<h1> <a href = "aboutme.html" class="btn"> PROJECTS </a></h1>
-				</div>
+		<div class="container">
+			<div class="main">
+				<h1> <a href = "index.html" class="btn"> MEERA RACHAMALLU </a></h1>
+				<h1> <a href = "aboutme.html" class="btn"> ABOUT ME</a> </h1>
+				<h1> <a href = "aboutme.html" class="btn"> PROJECTS </a></h1>
 			</div>
+		</div>
+
+		<!-- footer -->
+		<div class="footer">
+			<div class="container">
+				<p> Site designed and managed by Meera Rachamallu </p>
+			</div>
+		</div>
 	</body>
 </html>
