--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,16 @@
 		
 	</head>
 	<body>
-
-		</body>
+		<div class="projectbox">
+			<div>
+				<img src="images/profpic.JPG" alt="kim screenshot" >
+			</div>
+			<div>
+				<img src="images/roycehall.jpg" alt="kim screenshot">
+			</div>
+			<div>
+				<img src="images/roomiebear.JPG" alt="kim screenshot">
+			</div>
+		</div>
+	</body>
 </html>
