put in portfolio outline

--- a/projects.html
+++ b/projects.html
@@ -15,17 +15,66 @@
 		<link href= "style.css" type="text/css" rel="stylesheet"/>
 		
 	</head>
-	<body>
-		<div class="projectbox">
-			<div>
-				<img src="images/profpic.JPG" alt="kim screenshot" >
-			</div>
-			<div>
-				<img src="images/roycehall.jpg" alt="kim screenshot">
-			</div>
-			<div>
-				<img src="images/roomiebear.JPG" alt="kim screenshot">
-			</div>
+		<div class="nav">
+			<p> <a href = "index.html" class="backbtn"> Meera Rachamallu </a> </p>
 		</div>
+		<ul id="rig">
+	    <li>
+	        <a class="rig-cell" href="#">
+	            <img class="rig-img" src="images/kim.png">
+	            <span class="rig-overlay"></span>
+	            <span class="rig-text">Lorem Ipsum Dolor</span>
+	        </a>
+	    </li>
+	    <li>
+	        <a class="rig-cell" href="#">
+	            <img class="rig-img" src="images/kim.png">
+	            <span class="rig-overlay"></span>
+	            <span class="rig-text">Consectetur Adipiscing</span>
+	        </a>
+	    </li>
+	    <li>
+	        <a class="rig-cell" href="#">
+	            <img class="rig-img" src="images/profpic.JPG">
+	            <span class="rig-overlay"></span>
+	            <span class="rig-text">Vivamus ut Felis</span>
+	        </a>
+	    </li>
+	    <li>
+	        <a class="rig-cell" href="#">
+	            <img class="rig-img" src="images/kim.png">
+	            <span class="rig-overlay"></span>
+	            <span class="rig-text">Curabitur tempus</span>
+	        </a>
+	    </li>
+	    <li>
+	        <a class="rig-cell" href="#">
+	            <img class="rig-img" src="images/kim.png">
+	            <span class="rig-overlay"></span>
+	            <span class="rig-text">Sed et nunc luctus</span>
+	        </a>
+	    </li>
+	    <li>
+	        <a class="rig-cell" href="#">
+	            <img class="rig-img" src="images/kim.png">
+	            <span class="rig-overlay"></span>
+	            <span class="rig-text">Suspendisse tellus</span>
+	        </a>
+	    </li>
+	    <li>
+	        <a class="rig-cell" href="#">
+	            <img class="rig-img" src="images/profpic.JPG">
+	            <span class="rig-overlay"></span>
+	            <span class="rig-text">Vivamus ut Felis</span>
+	        </a>
+	    </li>
+	    <li>
+	        <a class="rig-cell" href="#">
+	            <img class="rig-img" src="images/profpic.JPG">
+	            <span class="rig-overlay"></span>
+	            <span class="rig-text">Vivamus ut Felis</span>
+	        </a>
+	    </li>
+</ul>
 	</body>
 </html>
