added project descriptions

--- a/projects.html
+++ b/projects.html
@@ -18,12 +18,18 @@
 		<div class="nav">
 			<p> <a href = "index.html" class="backbtn"> Meera Rachamallu </a> </p>
 		</div>
+		<div class="popupbox">
+			<h1> MODA </h1>
+			<h3> An App </h3>
+			<div class="textbox">
+			</div>
+		</div>
 		<ul id="rig">
 	    <li>
 	        <a class="rig-cell" href="#">
 	            <img class="rig-img" src="images/kim.png">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Lorem Ipsum Dolor</span>
+	            <span class="rig-text">Moda</span>
 	        </a>
 	    </li>
 	    <li>
