adding project pictures

--- a/projects.html
+++ b/projects.html
@@ -34,51 +34,51 @@
 	    </li>
 	    <li>
 	        <a class="rig-cell" href="#">
-	            <img class="rig-img" src="images/kim.png">
+	            <img class="rig-img" src="images/touchtestpic.png">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Consectetur Adipiscing</span>
+	            <span class="rig-text">TouchTest</span>
 	        </a>
 	    </li>
 	    <li>
 	        <a class="rig-cell" href="#">
 	            <img class="rig-img" src="images/profpic.JPG">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Vivamus ut Felis</span>
+	            <span class="rig-text">LED DiscoBall</span>
 	        </a>
 	    </li>
 	    <li>
 	        <a class="rig-cell" href="#">
 	            <img class="rig-img" src="images/kim.png">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Curabitur tempus</span>
+	            <span class="rig-text">BruinNavigation</span>
+	        </a>
+	    </li>
+	    <li>
+	        <a class="rig-cell" href="#">
+	            <img class="rig-img" src="images/pookieleap.JPG">
+	            <span class="rig-overlay"></span>
+	            <span class="rig-text">Mouse Car</span>
 	        </a>
 	    </li>
 	    <li>
 	        <a class="rig-cell" href="#">
 	            <img class="rig-img" src="images/kim.png">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Sed et nunc luctus</span>
-	        </a>
-	    </li>
-	    <li>
-	        <a class="rig-cell" href="#">
-	            <img class="rig-img" src="images/kim.png">
-	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Suspendisse tellus</span>
+	            <span class="rig-text">Neuroscience Internship</span>
 	        </a>
 	    </li>
 	    <li>
 	        <a class="rig-cell" href="#">
 	            <img class="rig-img" src="images/profpic.JPG">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Vivamus ut Felis</span>
+	            <span class="rig-text">Prep Egg</span>
 	        </a>
 	    </li>
 	    <li>
 	        <a class="rig-cell" href="#">
 	            <img class="rig-img" src="images/profpic.JPG">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Vivamus ut Felis</span>
+	            <span class="rig-text">Coming Soon</span>
 	        </a>
 	    </li>
 </ul>
