--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="main">
 				<h1> <a href = "index.html" class="btn"> MEERA RACHAMALLU </a></h1>
 				<h1> <a href = "aboutme.html" class="btn"> ABOUT ME</a> </h1>
-				<h1> <a href = "projects.html" class="btn"> PROJECTS </a></h1>
+				<h1> <a href = "projects.html" class="btn"> Featured Work </a></h1>
 			</div>
 		</div>
 
