--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 		<ul id="rig">
 	    <li>
 	        <a class="rig-cell" href="#">
-	            <img class="rig-img" src="images/kim.png">
+	            <img class="rig-img" src="images/moda.png">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">Moda</span>
 	        </a>
