--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 	        <a class="rig-cell" href="#">
 	            <img class="rig-img" src="images/kim.png">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">BruinNavigation</span>
+	            <span class="rig-text">Bruin Navigator</span>
 	        </a>
 	    </li>
 	    <li>
