--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Meera Rachamallu</title>
+		<title>aboutme</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
 </script>
 		<script type='text/javascript' src='main.js'></script>
