--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Meera Rachamallu</title>
+		<title>Featured Work</title>
 		<!--
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
 		<script src="js/bootstrap.js"></script>
