adding different descriptions via js

--- a/projects.html
+++ b/projects.html
@@ -19,32 +19,18 @@
 			<p> <a href = "index.html" class="backbtn"> Meera Rachamallu </a> </p>
 		</div>
 		<div class="popupbox">
-			<h1> MODA </h1>
-			<h3> An App </h3>
+			<h1 id = "modatitle"> MODA </h1>
+			<h3 id = "modasub" > An App </h3>
 			<div class="textbox">
-				<p> The iOS app, Moda, is a new way to shop and save all your liked items in one place.
+				<p id = "modadesc"> <!--The iOS app, Moda, is a new way to shop and save all your liked items in one place.
 Whenever the price drops on an item you have saved, you receive a push notification letting
-you know that your item is on sale.</p>
-			</div>
-		</div>
-		<div class="popupbox">
-			<h1> TouchTest </h1>
-			<h3> An App </h3>
-			<div class="textbox">
-				<p> An app that can assess and preliminarily diagnose mobile disorders such as Parkinsons in a few short steps. The User can take a questionnaire to diagnose Depression or a drawing test in which he or she traces the outlines of letters with a finger as closely as possible</p>
-			</div>
-		</div>
-		<div class="popupbox">
-			<h1> LED DiscoBall </h1>
-			<h3>  </h3>
-			<div class="textbox">
-				<p> An LED discoball which uses phidgets that lights up with different flashing patterns in response to different decibel levels. Coded in Java.</p>
+you know that your item is on sale. /--></p>
 			</div>
 		</div>
 
 		<ul id="rig">
 	    <li>
-	        <a class="rig-cell" href="#">
+	        <a class="rig-cell" href="#" id = "moda">
 	            <img class="rig-img" src="images/moda.png">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">Moda</span>
