different descriptions with jQuery

--- a/projects.html
+++ b/projects.html
@@ -19,10 +19,10 @@
 			<p> <a href = "index.html" class="backbtn"> Meera Rachamallu </a> </p>
 		</div>
 		<div class="popupbox">
-			<h1 id = "modatitle"> MODA </h1>
-			<h3 id = "modasub" > An App </h3>
+			<h1 id = "title"> Coming Soon </h1>
+			<h3 id = "subheading" >  </h3>
 			<div class="textbox">
-				<p id = "modadesc"> <!--The iOS app, Moda, is a new way to shop and save all your liked items in one place.
+				<p id = "description"> <!--The iOS app, Moda, is a new way to shop and save all your liked items in one place.
 Whenever the price drops on an item you have saved, you receive a push notification letting
 you know that your item is on sale. /--></p>
 			</div>
@@ -37,7 +37,7 @@ you know that your item is on sale. /--></p>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#">
+	        <a class="rig-cell" href="#" id = "touchtest">
 	            <img class="rig-img" src="images/touchtestpic.png">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">TouchTest</span>
