trying to fix descriptions

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,8 @@
 			<p> <a href = "index.html" class="backbtn"> Meera Rachamallu </a> </p>
 		</div>
 		<div class="popupbox">
-			<h1 id = "title"> Coming Soon </h1>
+		<div id = "title"> <h1> Coming Soon </h1> </div>
+			<!-- <h1 id = "title"> Coming Soon </h1> -->
 			<h3 id = "subheading" >  </h3>
 			<div class="textbox">
 				<p id = "description"> <!--The iOS app, Moda, is a new way to shop and save all your liked items in one place.
