--- a/projects.html
+++ b/projects.html
@@ -19,11 +19,10 @@
 			<p> <a href = "index.html" class="backbtn"> Meera Rachamallu </a> </p>
 		</div>
 		<div class="popupbox">
-		<div id = "title"> <h1> Coming Soon </h1> </div>
-			<!-- <h1 id = "title"> Coming Soon </h1> -->
-			<h3 id = "subheading" >  </h3>
-			<div class="textbox">
-				<p id = "description"> <!--The iOS app, Moda, is a new way to shop and save all your liked items in one place.
+		<div id="title"> <h1>Coming Soon</h1> </div>
+			<div id = "subheading" ><h3 > Coming Soon</h3> </div>
+			<div class="textbox" id = "description">
+				<p > <!--The iOS app, Moda, is a new way to shop and save all your liked items in one place.
 Whenever the price drops on an item you have saved, you receive a push notification letting
 you know that your item is on sale. /--></p>
 			</div>
@@ -31,9 +30,9 @@ you know that your item is on sale. /--></p>
 
 		<ul id="rig">
 	    <li>
-	        <a class="rig-cell" href="#" id = "moda">
-	            <img class="rig-img" src="images/moda.png">
-	            <span class="rig-overlay"></span>
+	        <a class="rig-cell" href="#" id = "moda" >
+	            <img class="rig-img" src="images/moda.png" >
+	            <span class="rig-overlay" ></span>
 	            <span class="rig-text">Moda</span>
 	        </a>
 	    </li>
