added all pics to featured work

--- a/projects.html
+++ b/projects.html
@@ -44,43 +44,43 @@ you know that your item is on sale. /--></p>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#">
-	            <img class="rig-img" src="images/profpic.JPG">
+	        <a class="rig-cell" href="#" id = "discoball">
+	            <img class="rig-img" src="images/disco.JPG">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">LED DiscoBall</span>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#">
-	            <img class="rig-img" src="images/kim.png">
+	        <a class="rig-cell" href="#" id = "bruinNavigator">
+	            <img class="rig-img" src="images/westwood.png">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">Bruin Navigator</span>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#">
+	        <a class="rig-cell" href="#" id = "mouseCar">
 	            <img class="rig-img" src="images/pookieleap.JPG">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">Mouse Car</span>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#">
-	            <img class="rig-img" src="images/kim.png">
+	        <a class="rig-cell" href="#" id ="stanford">
+	            <img class="rig-img" src="images/stanford.jpeg">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">Neuroscience Internship</span>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#">
-	            <img class="rig-img" src="images/profpic.JPG">
+	        <a class="rig-cell" href="#" id = "prepEgg">
+	            <img class="rig-img" src="images/prepegg.jpeg">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">Prep Egg</span>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#">
-	            <img class="rig-img" src="images/profpic.JPG">
+	        <a class="rig-cell" href="#" id = "comingSoon">
+	            <img class="rig-img" src="images/comingsoon.jpeg">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">Coming Soon</span>
 	        </a>
