added footer to featured work

--- a/projects.html
+++ b/projects.html
@@ -86,5 +86,12 @@ you know that your item is on sale. /--></p>
 	        </a>
 	    </li>
 </ul>
+
+		<!-- footer -->
+		<div class="footer">
+			<div class="container">
+				<p> Site designed and managed by Meera Rachamallu </p>
+			</div>
+		</div>
 	</body>
 </html>
