added articles section

--- a/index.html
+++ b/index.html
@@ -30,17 +30,18 @@
 		<!-- home look -->
 		<div class="container">
 			<div class="main">
-				<h1> <a href = "index.html" class="btn"> MEERA RACHAMALLU </a></h1>
-				<h1> <a href = "aboutme.html" class="btn"> ABOUT ME</a> </h1>
+				<h1> <a href = "aboutme.html" class="btn"> MEERA RACHAMALLU </a></h1>
+				<h1> <a href = "articles.html" class="btn"> Articles</a> </h1>
 				<h1> <a href = "projects.html" class="btn"> Featured Work </a></h1>
 			</div>
 		</div>
 
 		<!-- footer -->
+        <!--
 		<div class="footer">
 			<div class="container">
 				<p> Site designed and managed by Meera Rachamallu </p>
 			</div>
-		</div>
+		</div> -->
 	</body>
 </html>
