--- a/articles.html
+++ b/articles.html
@@ -15,83 +15,52 @@
 		<link href= "style.css" type="text/css" rel="stylesheet"/>
 		
 	</head>
-		<div class="nav">
-			<p> <a href = "index.html" class="backbtn"> Meera Rachamallu </a> </p>
-		</div>
-		<div class="popupbox">
-		<div id="title"> <h1>Coming Soon</h1> </div>
-			<div id = "subheading" ><h3 > Coming Soon</h3> </div>
-			<div class="textbox" id = "description">
-				<p > <!--The iOS app, Moda, is a new way to shop and save all your liked items in one place.
-Whenever the price drops on an item you have saved, you receive a push notification letting
-you know that your item is on sale. /--></p>
-			</div>
-		</div>
+        <div class="nav">
+            <p> <a href = "index.html" class="backbtn"> Meera Rachamallu </a> </p>
+        </div>
 
 		<ul id="rig">
+        <li>
+            <a class="rig-cell" href="https://medium.com/@mrachamallu" target="_blank">
+                <img class="rig-img" src="images/comingsoon.jpeg">
+                    <span class="rig-overlay"></span>
+                    <span class="rig-text">Coming Soon: How to PM an unfunded, time-constrained project in 10 steps</span>
+                    </a>
+        </li>
 	    <li>
-	        <a class="rig-cell" href="#" id = "moda" >
-	            <img class="rig-img" src="images/moda.png" >
-	            <span class="rig-overlay" ></span>
-	            <span class="rig-text">Moda</span>
+	        <a class="rig-cell" href="https://medium.com/@mrachamallu/multiple-row-selection-with-check-buttons-for-uitableviewcells-programmatically-efb36507891" target="_blank">
+	            <img class="rig-img" src="images/multiselect.png">
+	            <span class="rig-overlay"></span>
+                <span class="rig-text">Multiple Row Selection with Check Buttons for UITableViewCells (programmatically)</span>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#" id = "touchtest">
-	            <img class="rig-img" src="images/touchtestpic.png">
+	        <a class="rig-cell" href="https://drive.google.com/file/d/1P8XkEnPkGxVrWLmQS0L8DryHAbQAOM1_/view?usp=sharing" target="_blank">
+	            <img class="rig-img" src="images/kyliecosmetics.jpg">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">TouchTest</span>
+	            <span class="rig-text">King Kylie Seizes the Throne</span>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#" id = "discoball">
-	            <img class="rig-img" src="images/disco.JPG">
+            <a class="rig-cell" href="https://drive.google.com/file/d/1nHR7V3HWsRWLVw240O5VXQop0Peu_HqD/view?usp=sharing" target="blank">
+	            <img class="rig-img" src="images/snapchat.png">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">LED DiscoBall</span>
+	            <span class="rig-text">Snapchat Snaps Back</span>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#" id = "bruinNavigator">
-	            <img class="rig-img" src="images/westwood.png">
+	        <a class="rig-cell" href="https://drive.google.com/file/d/1Z9BfAM_77fXz6xIbiS8nGKoM1qcHRMc8/view?usp=sharing" target="_blank">
+	            <img class="rig-img" src="images/personalFinance.jpg">
 	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Bruin Navigator</span>
-	        </a>
-	    </li>
-	    <li>
-	        <a class="rig-cell" href="#" id = "mouseCar">
-	            <img class="rig-img" src="images/pookieleap.JPG">
-	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Mouse Car</span>
-	        </a>
-	    </li>
-	    <li>
-	        <a class="rig-cell" href="#" id ="stanford">
-	            <img class="rig-img" src="images/stanford.jpeg">
-	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Neuroscience Internship</span>
-	        </a>
-	    </li>
-	    <li>
-	        <a class="rig-cell" href="#" id = "prepEgg">
-	            <img class="rig-img" src="images/prepegg.jpeg">
-	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Prep Egg</span>
-	        </a>
-	    </li>
-	    <li>
-	        <a class="rig-cell" href="#" id = "comingSoon">
-	            <img class="rig-img" src="images/comingsoon.jpeg">
-	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Coming Soon</span>
+	            <span class="rig-text">Personal Finance for Students</span>
 	        </a>
 	    </li>
 </ul>
 
-		<!-- footer -->
-		<div class="footer">
-			<div class="container">
-				<p> Site designed and managed by Meera Rachamallu </p>
-			</div>
-		</div>
+<!--        <div class="footer">-->
+<!--            <div class="container">-->
+<!--                <p> Site designed and managed by Meera Rachamallu </p>-->
+<!--            </div>-->
+<!--        </div>-->
 	</body>
 </html>
