added pics to about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,19 +28,19 @@
 						<img src="images/roycehall.jpg" alt="kim screenshot" class="photos">
 					</div>
 					<div>
-						<img src="images/roomiebear.JPG" alt="kim screenshot" class="photos">
+						<img src="images/produce.JPG" alt="kim screenshot" class="photos">
 					</div>
 				</div>
 
 				<div class="photoboxBottom">
 					<div>
-						<img src="images/kim.png" alt="kim screenshot" class= "photos">
+						<img src="images/universal.jpg" alt="kim screenshot" class= "photos">
 					</div>
 					<div>
-						<img src="images/kkw.png" alt="kim screenshot" class="photos">
+						<img src="images/bobaFire.jpg" alt="kim screenshot" class="photos">
 					</div>
 					<div>
-						<img src="images/kim.png" alt="kim screenshot" class="photos">
+						<img src="images/treeClimbing.jpg" alt="kim screenshot" class="photos">
 					</div>
 				</div>
 				<!--
