updated featured work

--- a/aboutme.html
+++ b/aboutme.html
@@ -34,13 +34,13 @@
 
 				<div class="photoboxBottom">
 					<div>
-						<img src="images/universal.jpg" alt="kim screenshot" class= "photos">
+						<img src="images/universal.JPG" alt="kim screenshot" class= "photos">
 					</div>
 					<div>
 						<img src="images/bobaFire.jpg" alt="kim screenshot" class="photos">
 					</div>
 					<div>
-						<img src="images/treeClimbing.jpg" alt="kim screenshot" class="photos">
+						<img src="images/treeClimbing.JPG" alt="kim screenshot" class="photos">
 					</div>
 				</div>
 				<!--
@@ -81,11 +81,6 @@
 		</div>
 
 	<!--experience -->
-		
 
-		<!-- footer -->
-			<div class="footer">
-				<p> Site designed and managed by Meera Rachamallu </p>
-			</div>
 	</body>
 </html>
