--- a/projects.html
+++ b/projects.html
@@ -29,15 +29,36 @@ you know that your item is on sale. /--></p>
 		</div>
 
 		<ul id="rig">
+        <li>
+            <a class="rig-cell" href="https://github.com/mrachamallu/firefox-ios" target="_blank" id ="Mozilla">
+                <img class="rig-img" src="images/firefox.png">
+                    <span class="rig-overlay"></span>
+                    <span class="rig-text">Mozilla</span>
+            </a>
+        </li>
+        <li>
+            <a class="rig-cell" href="https://www.bruinmeet.com/about" target="_blank" id = "BruinMeet">
+                <img class="rig-img" src="images/bruinmeet.png">
+                    <span class="rig-overlay"></span>
+                    <span class="rig-text">BruinMeet</span>
+            </a>
+        </li>
+        <li>
+            <a class="rig-cell" href="http://ucladevx.com/#/" target="_blank" id = "UCLA DevX">
+                <img class="rig-img" src="images/devx.png">
+                    <span class="rig-overlay"></span>
+                    <span class="rig-text">UCLA DevX</span>
+            </a>
+        </li>
 	    <li>
-	        <a class="rig-cell" href="#" id = "moda" >
+	        <a class="rig-cell" href="https://github.com/mrachamallu/PriceDrop" target="_blank" id = "moda" >
 	            <img class="rig-img" src="images/moda.png" >
 	            <span class="rig-overlay" ></span>
 	            <span class="rig-text">Moda</span>
 	        </a>
 	    </li>
 	    <li>
-	        <a class="rig-cell" href="#" id = "touchtest">
+	        <a class="rig-cell" href="https://github.com/mrachamallu/TouchTest3" target="_blank" id = "touchtest">
 	            <img class="rig-img" src="images/touchtestpic.png">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">TouchTest</span>
@@ -45,18 +66,12 @@ you know that your item is on sale. /--></p>
 	    </li>
 	    <li>
 	        <a class="rig-cell" href="#" id = "discoball">
-	            <img class="rig-img" src="images/disco.JPG">
+	            <img class="rig-img" src="images/disco.jpg">
 	            <span class="rig-overlay"></span>
 	            <span class="rig-text">LED DiscoBall</span>
 	        </a>
 	    </li>
-	    <li>
-	        <a class="rig-cell" href="#" id = "bruinNavigator">
-	            <img class="rig-img" src="images/westwood.png">
-	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Bruin Navigator</span>
-	        </a>
-	    </li>
+
 	    <li>
 	        <a class="rig-cell" href="#" id = "mouseCar">
 	            <img class="rig-img" src="images/pookieleap.JPG">
@@ -64,20 +79,8 @@ you know that your item is on sale. /--></p>
 	            <span class="rig-text">Mouse Car</span>
 	        </a>
 	    </li>
-	    <li>
-	        <a class="rig-cell" href="#" id ="stanford">
-	            <img class="rig-img" src="images/stanford.jpeg">
-	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Neuroscience Internship</span>
-	        </a>
-	    </li>
-	    <li>
-	        <a class="rig-cell" href="#" id = "prepEgg">
-	            <img class="rig-img" src="images/prepegg.jpeg">
-	            <span class="rig-overlay"></span>
-	            <span class="rig-text">Prep Egg</span>
-	        </a>
-	    </li>
+
+
 	    <li>
 	        <a class="rig-cell" href="#" id = "comingSoon">
 	            <img class="rig-img" src="images/comingsoon.jpeg">
@@ -86,12 +89,5 @@ you know that your item is on sale. /--></p>
 	        </a>
 	    </li>
 </ul>
-
-		<!-- footer -->
-		<div class="footer">
-			<div class="container">
-				<p> Site designed and managed by Meera Rachamallu </p>
-			</div>
-		</div>
 	</body>
 </html>
